--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4"> <!--4 GRID UNTUK LAYAR SMALL (>=768PX)-->
-				<a href="" class="judul"><h1>Judul Website</h1></a>
+				<a href="" class="judul"><h1>Puasa</h1></a>
 			</div>
 			<div class="col-sm-8"><!--8 GRID UNTUK LAYAR SMALL (>=768PX)-->
 				<nav>
