--- a/kuis/index.html
+++ b/kuis/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>M. Ryan hidayatuloh</title>
+	<title>Ismaya Aji Saputra</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/css_part2.css">
 </head>
