--- a/jquery/latihan3.html
+++ b/jquery/latihan3.html
@@ -1,9 +1,9 @@
-<!Dotype html>
 <!DOCTYPE html>
 <html>
 <head>
 	<title>jQuery Effects - Fading</title>
-	<script src="js/jquery.min.js">
+	<script src="js/jquery.min.js"></script>
+	<script>
 	$(document).ready(function() {
 		$("button").click(function(){
 			$("#div1").fadeToggle();
@@ -18,9 +18,9 @@
 	<p>fadeToggle(). </p>
 	<button>fade in/out boxes </button><br><br>
 
-	<div id=div1 style="width: 80px; height: 80px;background-color: red;" ></div> <br>
-	<div id=div2 style="width: 80px; height: 80px;background-color: green;" ></div> <br>
-	<div id=div3 style="width: 80px; height: 80px;background-color: blue;" ></div> <br>
+	<div id="div1" style="width: 80px; height: 80px;background-color: red;" ></div> <br>
+	<div id="div2" style="width: 80px; height: 80px;background-color: green;" ></div> <br>
+	<div id="div3" style="width: 80px; height: 80px;background-color: blue;" ></div> <br>
 
 
 </body>
